@@ -1,3 +1,8 @@
+2013-12-06  Hirochika Asai  <asai@scyphus.co.jp>
+
+    * las/arch/x86_64/main.c: Added the BSF instruction
+
+
 2013-12-05  Hirochika Asai  <asai@scyphus.co.jp>
 
     * las/las.h: Added the definitions of operand size
